Remove unneeded `--add-opens=java.base/java.util=ALL-UNNAMED` (#1887)
Closes #1886